@@ -154,6 +154,7 @@ class UserrightsForm extends HTMLForm {
 		}
 
 		$this->showEditUserGroupsForm( $username, $user->getGroups() );
+		$this->showLogFragment( $user, $wgOut );
 	}
 	
 	/**
@@ -229,51 +230,24 @@ class UserrightsForm extends HTMLForm {
 	}
 
 	/**
-	 * Explains what groups the user can add and remove, and why.
+	 * Prepare a list of groups the user is able to add and remove
 	 *
-	 * @return string Explanatory sanitized HTML message
+	 * @return string
 	 */
 	private function explainRights() {
-		global $wgUser;
-		$groups = $wgUser->getEffectiveGroups();
-		foreach( $groups as $group ) {
-			if( $this->changeableByGroup( $group ) == array(
-				'add' => array(),
-				'remove' => array()
-			) ) {
-				// Can't add or remove anything, ignore this group
-				$groups = array_diff( $groups, array( $group ) );
-			}
-		}
-		$grouplists = array( $groups );
-		list( $grouplists[1], $grouplists[2] ) = array_values( $this->changeableGroups() );
+		global $wgUser, $wgLang;
 		
-		// Now format them nicely for display (yay mutable variables? I'm sick
-		// of thinking up new names)
-		foreach( $grouplists as &$list ) {
-			if( $list == array() ) {
-				$list = wfMsgExt( 'userrights-list-nogroups', 'parseinline' );
-			} else {
-				$list = wfMsgExt(
-					'userrights-list-groups',
-					'parseinline',
-					count( $list ),
-					implode(
-						$list,
-						wfMsgHtml( 'userrights-list-separator' )
-					)
-				);
-			}
-		}
+		$out = array();
+		list( $add, $remove ) = array_values( $this->changeableGroups() );
 		
-		return wfMsgExt(
-			'userrights-list',
-			'parse',
-			$grouplists[0],
-			$grouplists[1],
-			$grouplists[2]
-		);
-
+		if( count( $add ) > 0 )
+			$out[] = wfMsgExt( 'userrights-available-add', 'parseinline', $wgLang->listToText( $add ) );
+		if( count( $remove ) > 0 )
+			$out[] = wfMsgExt( 'userrights-available-remove', 'parseinline', $wgLang->listToText( $remove ) );
+			
+		return count( $out ) > 0
+			? implode( ' ', $out )
+			: wfMsgExt( 'userrights-available-none', 'parseinline' );
 	}
 
 	/**
@@ -403,5 +377,26 @@ class UserrightsForm extends HTMLForm {
 		}
 		return $groups;
 	}
-} // end class UserrightsForm
-
+	
+	/**
+	 * Show a rights log fragment for the specified user
+	 *
+	 * @param User $user User to show log for
+	 * @param OutputPage $output OutputPage to use
+	 */
+	protected function showLogFragment( $user, $output ) {
+		$viewer = new LogViewer(
+			new LogReader(
+				new FauxRequest(
+					array(
+						'type' => 'rights',
+						'page' => $user->getUserPage()->getPrefixedUrl(),
+					)
+				)
+			)
+		);
+		$output->addHtml( "<h2>" . htmlspecialchars( LogPage::logName( 'rights' ) ) . "</h2>\n" );
+		$viewer->showList( $output );
+	}
+	
+}
